@@ -1,3 +1,7 @@
+2002-08-14  Alexander Dupuy  <dupuy@sysdetect.com>
+
+	* lib/b_string.c (FLAG_BEGIN, FLAG_END): use [], not <>, for XML compat
+
 2002-08-09  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* include/libbk.h: bk_ioh_printf takes const char *format
